--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+  <meta name="viewport"
+    content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Sleeper League Management" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta property="og:title" content="Sleeper">
+  <meta property="og:description" content="Sleeper League Management">
+
+  <link rel="apple-touch-icon" href="https://sleepier-okarq.ondigitalocean.app/logo192.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,10 +34,10 @@
   <link href="https://fonts.cdnfonts.com/css/ubuntu-mono" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/groupe" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/sports-jersey" rel="stylesheet">
-  <link href="https://fonts.cdnfonts.com/css/registration-plate-uk" rel="stylesheet">                                              
+  <link href="https://fonts.cdnfonts.com/css/registration-plate-uk" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/monomaniac-one" rel="stylesheet">
-  
-                        
+
+
 </head>
 
 <body>
